fixed mobile spacing issue in icon area

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -130,7 +130,7 @@
   }
   .space-junk__question {
     margin: 0 0 30px 0;
-    width: 34%;
+    width: 44%;
   }
   .space-junk__question-icon {
     width: 75px;
